manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-backend
  labels:
    app: dashboard-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-backend
  template:
    metadata:
      labels:
        app: dashboard-backend
    spec:
      containers:
        - name: dashboard-backend
          image: dashboard-backend:latest
          ports:
            - containerPort: 3001
          imagePullPolicy: IfNotPresent
