manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-frontend
  labels:
    app: dashboard-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-frontend
  template:
    metadata:
      labels:
        app: dashboard-frontend
    spec:
      containers:
        - name: dashboard-frontend
          image: dashboard-frontend:latest
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
