manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: dashboard-backend
spec:
  selector:
    app: dashboard-backend
  ports:
    - protocol: TCP
      port: 3001        # Porta esposta dal Service
      targetPort: 3001  # Porta su cui il backend ascolta all'interno del pod
      nodePort: 31000    # Porta su cui il Service ascolta sul nodo
  type: NodePort       # Tipo di Service (ClusterIP è il valore predefinito)
