manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: dashboard-frontend
spec:
  type: ClusterIP  # Cambia il tipo da ClusterIP a NodePort
  selector:
    app: dashboard-frontend
  ports:
    - protocol: TCP
      port: 80          # Porta esposta dal Service
      targetPort: 80      # Porta su cui il frontend ascolta all'interno del pod
