manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"  # Aggiungi questa annotazione se usi NGINX come Ingress Controller
spec:
  rules:
  - host: "localhost" # Sostituisci con il tuo dominio
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3001  # Porta del backend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80  # Porta del frontend
